@@ -48,6 +48,7 @@
   [#18903] ATmega644 register definitions for SPI and PRR (datasheet vs. 
            iom*.h)
   [#18915] PWM1X Bit missing for ATtiny261/461/861
+  [#19009] Make <util/delay.h> issue a warning when optimizations are turned off
   [#19050] gcrt1.S should call main rather than jumping to it
   [#19060] PCMSKx registers transposed in header for attinyX61
   [#19445] _malloc_heap_end does not follow _heap_end on m2561
